@@ -6,9 +6,8 @@ Entering h
 Entering i
 Throwing ExnB...
 Caught an ExnB
-Raised by primitive operation at Exn_in_callback.g in file "exn_in_callback.ml", line 43, characters 2-27
-Called from Exn_in_callback.f in file "exn_in_callback.ml", line 49, characters 7-11
-Leaving f
+Raised by primitive operation at Exn_in_callback.g in file "exn_in_callback.ml", line 46, characters 2-27
+Called from Exn_in_callback.f in file "exn_in_callback.ml", line 52, characters 7-11
 ==================
 WARNING: ThreadSanitizer: data race (pid=<implemspecific>)
   Write of size 8 at <implemspecific> by thread T1 (mutexes: write M<implemspecific>):
@@ -49,4 +48,5 @@ WARNING: ThreadSanitizer: data race (pid=<implemspecific>)
 
 SUMMARY: ThreadSanitizer: data race (<systemspecific>:<implemspecific>) in camlExn_in_callback$writer_<implemspecific>
 ==================
+Leaving f
 ThreadSanitizer: reported 1 warnings
